# web-boilerplate

./: .gitignore  README.md  development.env  docker-compose.yml  production.env
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
frontend/: entrypoint.sh  package-lock.json  package.json  requirements.txt
nginx/: nginx-proxy.conf
