[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "Boilerplate for python, react and nginx"
authors = ["ullyzian <aviev2000@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.3.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
